@@ -78,6 +78,11 @@ TAO_BasicLogFactory_i::create_with_id (DsLogAdmin::LogId id,
                    DsLogAdmin::InvalidLogFullAction
                    ))
 {
+  // Validate log_full_action before creating log
+  if (full_action != DsLogAdmin::wrap && full_action != DsLogAdmin::halt)
+    ACE_THROW_RETURN (DsLogAdmin::InvalidLogFullAction (),
+                      DsLogAdmin::BasicLog::_nil ());
+
   // Make sure the id not used up.
   if (hash_map_.find (id) == 0)
     ACE_THROW_RETURN (DsLogAdmin::LogIdAlreadyExists (),
